tabletop-tracker/main/default/objects/Character__c/fields/Dungeon__c.field-meta.xml
<CustomField>
    <fullName>Dungeon__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Dungeon the Character currently resides in.</description>
    <label>Dungeon</label>
    <referenceTo>Dungeon__c</referenceTo>
    <relationshipLabel>Characters</relationshipLabel>
    <relationshipName>Characters</relationshipName>
    <type>Lookup</type>
</CustomField>