tabletop-tracker/main/default/objects/Character__c/fields/Game_Type__c.field-meta.xml
<CustomField>
    <fullName>Game_Type__c</fullName>
    <label>Game Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Game_Options</valueSetName>
    </valueSet>
</CustomField>