tabletop-tracker/main/default/objects/Character__c/fields/Player__c.field-meta.xml
<CustomField>
    <fullName>Player__c</fullName>
    <description>The Player who owns the Character</description>
    <label>Player</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Characters</relationshipLabel>
    <relationshipName>Characters</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>